# clickhouse-kafka

./: RESULTS.md  TS_BENCHMARK.md  docker-compose.yml
clickhouse/: init.sql
client/: CMakeLists.txt  Dockerfile
client/src/: clickhouse_writer.cpp  clickhouse_writer.hpp  kafka_writer.cpp  kafka_writer.hpp  main.cpp  record.cpp  record.hpp  utils.cpp  utils.hpp
scripts/: run_benchmark.sh
